[#3008]add tests and documents that header should encoded when not ASCII (#4460)